--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 title: "Bodybuilding Prep"
 description: "Training logs and exercise notes"
 theme: minima
+collections:
+  exercises:
+    output: true
+    permalink: /exercises/:name/
