--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Brock's Body Building Journal"
+title: "Brock's Bodybuilding Journal"
 description: "Training logs and exercise notes"
 profile_image: /assets/images/bmf.png
 accent_color: "#F6E27F"
